# zkevm-chain

./: .gitignore  Cargo.toml  README.md
common/: Cargo.toml
common/src/: prover.rs
coordinator/: Cargo.toml
coordinator/src/: shared_state.rs
dev/: Cargo.toml
prover/: Cargo.toml  build.rs
prover/src/: aggregation_circuit.rs  circuit_autogen.rs  circuit_witness.rs  circuits.rs  lib.rs  server.rs  shared_state.rs  utils.rs
prover/tests/: proverd.rs  verifier.rs
