[workspace]
members = [
  "coordinator",
  "prover",
  "dev"
]

[profile.release]
opt-level = 3
lto = "thin"

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/smtmfft/halo2.git", rev = "50ee8ad785c53232824e60b4ff6df32b69970358", package = "halo2_proofs" }